2008-09-29  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_string_search_ci): case insensitive
	substring search

2008-09-28  Ales Hakl  <ales at hakl dot net>

	* src/strings.c (dfsch_string_search): substring search function

2008-09-25  Ales Hakl  <ales at hakl dot net>

	* src/format.c (format_r): radix directive
	(dfsch_format): more directives (almost complete SRFI 48)

	* src/number.c (dfsch_number_to_string): support for different
	numeric bases

	* src/dfsch.c (dfsch_declare): API to declarations (other side is
	compiler, which is something that just might exist in future)

	* src/conditions.c (dfsch__conditions_register): handler-bind and
	restart-case special forms

2008-09-23  Ales Hakl  <ales at hakl dot net>

	* src/conditions.c (compute_restarts): compute-restarts function

2008-09-19  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: ability to look inside functions (and break things
	badly by modifing it)

2008-09-18  Ales Hakl  <ales at hakl dot net>

	* src/introspect.c (dfsch_get_stack_trace): get_stack_trace works
	(stack_frame_apply): stack frames are inspectable by user code
	REgister some primitive functions and stack frame type

2008-09-17  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_apply_impl): native stack frames

2008-08-18  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: removed remnants of old exception mechanism

2008-08-16  Ales Hakl  <ales at hakl dot net>

	* lib/cdebug.c: reworked debugger. Debugger is now selected
	globally and does not show up as condition handler. Also debugger
	contains full REPL.

2008-08-15  Ales Hakl  <ales at hakl dot net>

	* Makefile.am: correct inter-library dependencies 

	* src/repl.c (interactive_repl): Use console library to read input

	* lib/console.c: simple console input functions

2008-08-14  Ales Hakl  <ales at hakl dot net>

	* lib/debug.c: Moved into library

2008-08-10  Ales Hakl  <ales at hakl dot net>

	* scm/test.scm: more tests
