@@ -1,5 +1,9 @@
 2008-09-29  Ales Hakl  <ales at hakl dot net>
 
+	* src/dfsch.c: Readable error messages
+
+2008-09-29  Ales Hakl  <ales at hakl dot net>
+
 	* src/strings.c (dfsch_string_search_ci): case insensitive
 	substring search
 
